# my-lodge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/my_lodge/: app.py  cli.py
static/govuk/: all.bundle.mjs.map  all.mjs.map  i18n.mjs.map  init.mjs.map
static/govuk/common/: configuration.mjs.map
static/govuk/components/accordion/: accordion.bundle.mjs.map  accordion.mjs.map
static/govuk/components/button/: button.bundle.mjs.map
static/govuk/components/character-count/: character-count.bundle.mjs.map
static/govuk/components/checkboxes/: checkboxes.bundle.mjs.map
static/govuk/components/error-summary/: error-summary.mjs.map
static/govuk/components/exit-this-page/: exit-this-page.mjs.map
static/govuk/components/file-upload/: file-upload.bundle.js.map  file-upload.bundle.mjs.map
static/govuk/components/notification-banner/: notification-banner.bundle.js.map  notification-banner.bundle.mjs.map
static/govuk/components/radios/: radios.mjs.map
static/govuk/components/service-navigation/: service-navigation.bundle.js.map  template-inverse.html  template-with-a-single-navigation-item-and-collapsenavigationonmobile-set-to-true.html  template-with-a-single-navigation-item.html  (+3 more)
static/govuk/errors/: index.mjs.map
static/govuk/govuk/: all.bundle.js.map  component.mjs.map
templates/: base.jinja2  calendar.jinja2  error.jinja2  expired.jinja2  index.jinja2  login.jinja2  share.jinja2
(+36 files in other folders)
