[project]
name = "my-lodge"
version = "0.1.0"
description = ""
authors = [{name = "Albert Kolozsvari", email = "albertartk@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "bookcraft>=0.3.0",
    "flask>=3.1",
    "govuk-frontend-jinja>=3.0",
    "gunicorn>=23.0",
    "pyyaml>=6.0",
    "qrcode[pil]>=7.0",
]

[project.scripts]
craft = "my_lodge.cli:craft"
craft-dark = "my_lodge.cli:craft_dark"
ra = "my_lodge.cli:ra"
ra-dark = "my_lodge.cli:ra_dark"
serve = "my_lodge.app:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_lodge"]

[dependency-groups]
dev = [
    "djlint>=1.0",
    "ruff>=0.9",
    "ty>=0.0.1a6",
    "pre-commit>=4.0",
]

[tool.djlint]
profile = "jinja"
ignore = "H021,H025,H030,H031,J018,T001"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv.sources]
bookcraft = { path = "../bookcraft", editable = true }
